added custom base without the requirement of some template

--- a/examples/index.html
+++ b/examples/index.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<script src="example-html.ts"></script>
+<!-- <script src="example-html.ts"></script> -->
 <body>
     <div></div>
     <!-- <html-test></html-test> -->
 </body>
+<script src="example-no-template.ts"></script>
 </html>
